k8s-manifests/le-minio.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "10"
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"minio","project":"linkedeye"},"name":"minio","namespace":"le-minio"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"minio"}},"strategy":{"type":"Recreate"},"template":{"metadata":{"labels":{"app":"minio","project":"linkedeye"}},"spec":{"containers":[{"command":["minio","server","/data","--console-address",":9001"],"envFrom":[{"configMapRef":{"name":"minio-config"}},{"secretRef":{"name":"mini [...]
    labels:
      app: minio
      project: linkedeye
    name: minio
    namespace: le-minio
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: minio
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-04-01T07:07:39Z"
        labels:
          app: minio
          project: linkedeye
      spec:
        containers:
        - command:
          - minio
          - server
          - /data
          - --console-address
          - :9001
          image: minio/minio:latest
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/live
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 1
          name: minio
          ports:
          - containerPort: 9000
            name: api
            protocol: TCP
          - containerPort: 9001
            name: console
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /minio/health/ready
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 250m
              memory: 1Gi
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /data
            name: minio-data
        dnsPolicy: ClusterFirst
        nodeSelector:
          role: mgmt-tools
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 1000
        terminationGracePeriodSeconds: 30
        volumes:
        - name: minio-data
          persistentVolumeClaim:
            claimName: minio-data-pvc
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-04-01T07:08:13Z"
      lastUpdateTime: "2026-04-01T07:08:13Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-03-17T17:07:05Z"
      lastUpdateTime: "2026-04-01T07:08:13Z"
      message: ReplicaSet "minio-fdf89788f" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 17
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"minio","project":"linkedeye"},"name":"minio-api-svc","namespace":"le-minio"},"spec":{"ports":[{"name":"api","port":9000,"targetPort":9000}],"selector":{"app":"minio"},"type":"NodePort"}}
    labels:
      app: minio
      project: linkedeye
    name: minio-api-svc
    namespace: le-minio
  spec:
    clusterIP: 172.20.150.166
    clusterIPs:
    - 172.20.150.166
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: api
      nodePort: 30147
      port: 9000
      protocol: TCP
      targetPort: 9000
    selector:
      app: minio
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"minio","project":"linkedeye"},"name":"minio-console-svc","namespace":"le-minio"},"spec":{"ports":[{"name":"console","port":9001,"targetPort":9001}],"selector":{"app":"minio"},"type":"NodePort"}}
    labels:
      app: minio
      project: linkedeye
    name: minio-console-svc
    namespace: le-minio
  spec:
    clusterIP: 172.20.162.118
    clusterIPs:
    - 172.20.162.118
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: console
      nodePort: 31114
      port: 9001
      protocol: TCP
      targetPort: 9001
    selector:
      app: minio
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
- apiVersion: v1
  data:
    ca.crt: |
      -----BEGIN CERTIFICATE-----
      MIIDBTCCAe2gAwIBAgIIaD2eUcmw3GgwDQYJKoZIhvcNAQELBQAwFTETMBEGA1UE
[...]
      s+x6YEsT5iPc
      -----END CERTIFICATE-----
  kind: ConfigMap
  metadata:
    annotations:
      kubernetes.io/description: Contains a CA bundle that can be used to verify the
        kube-apiserver when using internal endpoints such as the internal service
        IP or kubernetes.default.svc. No other usage is guaranteed across distributions
        of Kubernetes clusters.
    name: kube-root-ca.crt
    namespace: le-minio
- apiVersion: v1
  data:
    DEFAULT_BUCKETS: jenkins-artifacts,velero-backups,harbor-registry,grafana-snapshots,linkedeye-logs
    MINIO_API_SELECT_PARQUET: "off"
    MINIO_AUDIT_WEBHOOK_ENABLE: "off"
    MINIO_BROWSER_REDIRECT_URL: https://le-minio.finspot.in
    MINIO_COMPRESSION_ENABLE: "on"
    MINIO_COMPRESSION_EXTENSIONS: .txt,.log,.csv,.json,.xml
    MINIO_PROMETHEUS_AUTH_TYPE: public
    MINIO_PROMETHEUS_URL: http://prometheus.monitoring.svc.cluster.local:9090
    MINIO_SERVER_URL: http://minio-api-svc.le-minio:9000
    MINIO_SITE_NAME: linkedeye-finspot
    MINIO_SITE_REGION: ap-south-1
    MINIO_VOLUMES: /data
  kind: ConfigMap
  metadata:
    annotations:
        {"apiVersion":"v1","data":{"DEFAULT_BUCKETS":"jenkins-artifacts,velero-backups,harbor-registry,grafana-snapshots,linkedeye-logs","MINIO_API_SELECT_PARQUET":"off","MINIO_AUDIT_WEBHOOK_ENABLE":"off","MINIO_BROWSER_REDIRECT_URL":"https://le-minio.finspot.in","MINIO_COMPRESSION_ENABLE":"on","MINIO_COMPRESSION_EXTENSIONS":".txt,.log,.csv,.json,.xml","MINIO_PROMETHEUS_AUTH_TYPE":"public","MINIO_PROMETHEUS_URL":"http://prometheus.monitoring.svc.cluster.local:9090","MINIO_SERVER_URL":"https://le [...]
    labels:
      app: minio
      project: linkedeye
    name: minio-config
    namespace: le-minio
- apiVersion: v1
  data:
    GRAFANA_ACCESS_KEY: Z3JhZmFuYS1hY2Nlc3Mta2V5
    GRAFANA_SECRET_KEY: Z3JhZmFuYS1zZWNyZXQta2V5LWNoYW5nZQ==
    HARBOR_ACCESS_KEY: aGFyYm9yLWFjY2Vzcy1rZXk=
    HARBOR_SECRET_KEY: aGFyYm9yLXNlY3JldC1rZXktY2hhbmdl
    JENKINS_ACCESS_KEY: amVua2lucy1hY2Nlc3Mta2V5
    JENKINS_SECRET_KEY: amVua2lucy1zZWNyZXQta2V5LWNoYW5nZQ==
    MINIO_ROOT_PASSWORD: TWluaW9ARmluU3BvdDIwMjUh
    MINIO_ROOT_USER: bWluaW9hZG1pbg==
    VELERO_ACCESS_KEY: dmVsZXJvLWFjY2Vzcy1rZXk=
    VELERO_SECRET_KEY: dmVsZXJvLXNlY3JldC1rZXktY2hhbmdl
  kind: Secret
  metadata:
    annotations:
        {"apiVersion":"v1","kind":"Secret","metadata":{"annotations":{},"labels":{"app":"minio","project":"linkedeye"},"name":"minio-secret","namespace":"le-minio"},"stringData":{"GRAFANA_ACCESS_KEY":"grafana-access-key","GRAFANA_SECRET_KEY":"grafana-secret-key-change","HARBOR_ACCESS_KEY":"harbor-access-key","HARBOR_SECRET_KEY":"harbor-secret-key-change","JENKINS_ACCESS_KEY":"jenkins-access-key","JENKINS_SECRET_KEY":"jenkins-secret-key-change","MINIO_ROOT_PASSWORD":"Minio@FinSpot2025!","MINIO_RO [...]
    labels:
      app: minio
      project: linkedeye
    name: minio-secret
    namespace: le-minio
  type: Opaque
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"labels":{"app":"minio","project":"linkedeye"},"name":"minio-network-policy","namespace":"le-minio"},"spec":{"egress":[{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}]},{"ports":[{"port":443},{"port":8080}]}],"ingress":[{"ports":[{"port":9000}]},{"ports":[{"port":9001}]}],"podSelector":{"matchLabels":{"app":"minio"}},"policyTypes":["Ingress","Egress"]}}
    labels:
      app: minio
      project: linkedeye
    name: minio-network-policy
    namespace: le-minio
  spec:
    egress:
    - ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    - ports:
      - port: 443
        protocol: TCP
      - port: 8080
        protocol: TCP
    ingress:
    - ports:
      - port: 9000
        protocol: TCP
    - ports:
      - port: 9001
        protocol: TCP
    podSelector:
      matchLabels:
        app: minio
    policyTypes:
    - Ingress
    - Egress
- apiVersion: v1
  kind: PersistentVolumeClaim
  metadata:
    annotations:
        {"apiVersion":"v1","kind":"PersistentVolumeClaim","metadata":{"annotations":{},"labels":{"app":"minio","project":"linkedeye"},"name":"minio-data-pvc","namespace":"le-minio"},"spec":{"accessModes":["ReadWriteOnce"],"resources":{"requests":{"storage":"50Gi"}},"storageClassName":"gp3"}}
      pv.kubernetes.io/bind-completed: "yes"
      pv.kubernetes.io/bound-by-controller: "yes"
      volume.beta.kubernetes.io/storage-provisioner: ebs.csi.aws.com
      volume.kubernetes.io/selected-node: ip-10-15-1-169.ap-south-1.compute.internal
      volume.kubernetes.io/storage-provisioner: ebs.csi.aws.com
    finalizers:
    - kubernetes.io/pvc-protection
    labels:
      app: minio
      project: linkedeye
    name: minio-data-pvc
    namespace: le-minio
  spec:
    accessModes:
    - ReadWriteOnce
    resources:
      requests:
        storage: 50Gi
    storageClassName: gp3
    volumeMode: Filesystem
    volumeName: pvc-af4c441e-9ac0-4fb2-b48c-758e438d3b89
  status:
    accessModes:
    - ReadWriteOnce
    capacity:
      storage: 50Gi
    phase: Bound
- apiVersion: v1
  kind: ServiceAccount
  metadata:
    name: default
    namespace: le-minio
kind: List
metadata:
